--- a/app/templates/add_account.html
+++ b/app/templates/add_account.html
@@ -7,10 +7,113 @@
                 <legend>
                     Sign Up an Account
                 </legend>
+                
+                <!-- Username Field -->
+                <div class="form-group">
+                    {{ form.username.label(class="form-control-label") }}
+                    {% if form.username.errors %}
+                        {{ form.username(class="form-control is-invalid") }}
+                        {% for error in form.username.errors %}
+                            <div class="invalid-feedback">
+                                <span>
+                                    {{ error }}
+                                </span>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        {{ form.username(class="form-control") }}
+                    {% endif %}
+                </div>
+
+                <!-- Password Field -->
+                <div class="form-group">
+                    {{ form.password.label(class="form-control-label") }}
+                    {% if form.password.errors %}
+                        {{ form.password(class="form-control is-invalid", onfocus="checkCapsLock(event, 'capslockIndicator')") }}
+                        {% for error in form.password.errors %}
+                            <div class="invalid-feedback">
+                                <span>
+                                    {{ error }}
+                                </span>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        {{ form.password(class="form-control", onfocus="checkCapsLock(event, 'capslockIndicator')") }}
+                    {% endif %}
+                </div>
+
+                <!-- Confirm Password Field -->
+                <div class="form-group">
+                    {{ form.confirm_password.label(class="form-control-label") }}
+                    {% if form.confirm_password.errors %}
+                        {{ form.confirm_password(class="form-control is-invalid", onfocus="checkCapsLock(event, 'capslockIndicator')") }}
+                        {% for error in form.confirm_password.errors %}
+                            <div class="invalid-feedback">
+                                <span>
+                                    {{ error }}
+                                </span>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        {{ form.confirm_password(class="form-control", onfocus="checkCapsLock(event, 'capslockIndicator')") }}
+                    {% endif %}
+                </div>
+
+                <!-- Name Field -->
                 <div class="form-group">
                     {{ form.name.label(class="form-control-label") }}
-                    {{ form.name(class="form-control") }}
+                    {% if form.name.errors %}
+                        {{ form.name(class="form-control is-invalid") }}
+                        {% for error in form.name.errors %}
+                            <div class="invalid-feedback">
+                                <span>
+                                    {{ error }}
+                                </span>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        {{ form.name(class="form-control") }}
+                    {% endif %}
                 </div>
+
+                <!-- Email Field -->
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control is-invalid") }}
+                        {% for error in form.email.errors %}
+                            <div class="invalid-feedback">
+                                <span>
+                                    {{ error }}
+                                </span>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        {{ form.email(class="form-control") }}
+                    {% endif %}
+                </div>
+
+                <!-- Subscription Field -->
+                <div class="form-group">
+                    {{ form.subscription.label(class="form-control-label") }}
+                    {% if form.subscription.errors %}
+                        {{ form.subscription(class="custom-dropdown is-invalid") }}
+                        {% for error in form.subscription.errors %}
+                            <div class="invalid-feedback">
+                                <span>
+                                    {{ error }}
+                                </span>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        {{ form.subscription(class="custom-dropdown") }}
+                    {% endif %}
+                </div>
+
+                <div class="form-group">
+                    {{ form.submit(class="btn btn-outline-info mt-2") }}
+                </div>
+
             </fieldset>
         </form>
     </div>
