--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     {% if title %}
         <title>{{ title }}</title>
     {% else %}
         <title>Adv POS</title>
     {% endif %}
-    
 </head>
 <body>
 
@@ -44,7 +44,42 @@
             <div class="col-md-2"></div>
         </div>
     </main>
+  
+  <script>
+      document.addEventListener('DOMContentLoaded', function () {
+          var passwordField = document.querySelector('[name="password"]');
+          var confirmPasswordField = document.querySelector('[name="confirm_password"]');
+          var capsLockIndicator = document.getElementById('capsLockIndicator');
+  
+          // Function to check Caps Lock state
+          function checkCapsLock(event) {
+              if (event.getModifierState && event.getModifierState("CapsLock")) {
+                  capsLockIndicator.style.display = "block";  // Show Caps Lock indicator
+              } else {
+                  capsLockIndicator.style.display = "none";  // Hide Caps Lock indicator
+              }
+          }
+  
+          // Check Caps Lock on keydown event for password fields
+          if (passwordField) {
+              passwordField.addEventListener('keydown', checkCapsLock);
+          }
+          if (confirmPasswordField) {
+              confirmPasswordField.addEventListener('keydown', checkCapsLock);
+          }
+  
+          // Optional: Hide the indicator when user clicks outside the password fields
+          passwordField.addEventListener('blur', function() {
+              capsLockIndicator.style.display = "none";
+          });
+  
+          confirmPasswordField.addEventListener('blur', function() {
+              capsLockIndicator.style.display = "none";
+          });
+      });
+  </script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
