--- a/app/templates/admin_signup.html
+++ b/app/templates/admin_signup.html
@@ -5,7 +5,7 @@
             {{ form.csrf_token() }}
             <fieldset class="form-group">
                 <legend>
-                    Sign Up a User Account
+                    Sign Up an Admin Account
                 </legend>
                 
                 <!-- Username Field -->
