--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -13,57 +13,6 @@
     {% endif %}
 </head>
 <body>
-<!-- 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link {% if request.endpoint == 'main.dashboard' %}active{% endif %}" href="{{ url_for('main.dashboard') }}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link {% if request.endpoint == 'sales_blueprint.sales' %}active{% endif %}" href="{{ url_for('sales_blueprint.sales') }}">Sales</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'products_blueprint.products' %}active{% endif %}" href="{{ url_for('products_blueprint.products') }}">Products</a>
-                      </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header> -->
-<!-- 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.endpoint == 'main.dashboard' %}active{% endif %}" href="{{ url_for('main.dashboard') }}">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle {% if 'sales_blueprint' in request.endpoint %}active{% endif %}" 
-                               href="#" id="salesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Sales
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="salesDropdown">
-                                <li>
-                                    <a class="dropdown-item" href="{{ url_for('sales_blueprint.sales') }}">View Sales</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="{{ url_for('sales_blueprint.sales_add') }}">Add Sale</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.endpoint == 'products_blueprint.products' %}active{% endif %}" href="{{ url_for('products_blueprint.products') }}">Products</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header> -->
     
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -75,7 +24,23 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link {% if request.endpoint == 'main.dashboard' %}active{% endif %}" href="{{ url_for('main.dashboard') }}">Home</a>
+                            <a class="nav-link {% if request.endpoint == 'main.index' %}active{% endif %}" href="{{ url_for('main.index') }}">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            {% if session.get('is_admin', False) %}
+                            <a class="nav-link dropdown-toggle {% if 'users_blueprint' in request.endpoint %}active{% endif %}" 
+                               href="#" id="usersDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Users
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="usersDropdown">
+                                <li>
+                                    <a class="dropdown-item" href="{{ url_for('users_blueprint.users') }}">View Users</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{{ url_for('users_blueprint.users_add') }}">Add User</a>
+                                </li>
+                            </ul>
+                            {% endif %}
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle {% if 'sales_blueprint' in request.endpoint %}active{% endif %}" 
@@ -91,8 +56,19 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.endpoint == 'products_blueprint.products' %}active{% endif %}" href="{{ url_for('products_blueprint.products') }}">Products</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle {% if 'products_blueprint' in request.endpoint %}active{% endif %}" 
+                               href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Products
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="productsDropdown">
+                                <li>
+                                    <a class="dropdown-item" href="{{ url_for('products_blueprint.products') }}">View Products</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{{ url_for('products_blueprint.products_add') }}">Add Product</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
