--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     <div class="mt-5">
-        <form action="{{ url_for('accounts.login') }}" method="POST">
+        <form action="{{ url_for('main.login') }}" method="POST">
             {{ form.csrf_token() }}
             <fieldset class="form-group">
-                <legend>Login</legend>
+                <legend>Login User or Admin</legend>
 
                 <!-- Username Field -->
                 <div class="form-group">
@@ -37,9 +37,12 @@
                     {% endif %}
                 </div>
 
-                <!-- Submit Button -->
-                <div class="form-group mt-3">
-                    {{ form.submit(class="btn btn-primary w-100") }}
+                <div class="container-buttons">
+                    <!-- Submit Button -->
+                    <div class="form-group mt-3">
+                        {{ form.submit(class="btn btn-primary w-100") }}
+                    </div>
+                    <a href="{{ url_for('main.admin_signup') }}", class="btn btn-secondary">Admin Signup</a>
                 </div>
             </fieldset>
         </form>
