--- a/app/templates/sales_add.html
+++ b/app/templates/sales_add.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="container mt-4">
     <div class="row">
-        <!-- Sales Records Container -->
-        <div class="col-md-6">
-            <h3>Sales Records</h3>
+            <!-- Sales Records Container -->
+        <div class="col-md-6 sales-records">
+            <h5>Sales Records</h5>
             <table class="table">
                 <thead>
                     <tr>
@@ -31,10 +31,9 @@
                 </tbody>
             </table>
         </div>
-
         <!-- Add Sale Form Container -->
-        <div class="col-md-6">
-            <h3>Add New Sale</h3>
+        <div class="col-md-6 add-new-sale">
+            <h5>Add New Sale</h5>
             <form method="POST" action="{{ url_for('sales_blueprint.sales_add') }}">
                 <div class="mb-3">
                     <label for="sale_date" class="form-label">Date of Sale</label>
@@ -72,7 +71,7 @@
                     <input type="number" step="0.01" class="form-control" id="total" name="total" readonly>
                 </div>
 
-                <button type="submit" class="btn btn-primary">Add Sale</button>
+                <button type="submit" class="btn btn-primary">Save Sale</button>
                 <a href="{{ url_for('sales_blueprint.sales') }}" class="btn btn-secondary">Cancel</a>
             </form>
         </div>
