edit, delete users by admin privileges

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,25 +22,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link {% if request.endpoint == 'main.index' %}active{% endif %}" href="{{ url_for('main.index') }}">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            {% if session.get('is_admin', False) %}
-                            <a class="nav-link dropdown-toggle {% if 'users_blueprint' in request.endpoint %}active{% endif %}" 
-                               href="#" id="usersDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Users
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="usersDropdown">
-                                <li>
-                                    <a class="dropdown-item" href="{{ url_for('users_blueprint.users') }}">View Users</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="{{ url_for('users_blueprint.users_add') }}">Add User</a>
-                                </li>
-                            </ul>
-                            {% endif %}
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle {% if 'sales_blueprint' in request.endpoint %}active{% endif %}" 
@@ -70,6 +54,35 @@
                                 </li>
                             </ul>
                         </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
+                        {% if session.get('is_admin', False) %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Admin Section
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="adminDropdown">
+                                <li><a class="dropdown-item" href="{{ url_for('users_blueprint.users') }}">View Users</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('users_blueprint.users_add') }}">Add User</a></li>
+                            </ul>
+                        </li>
+                        {% endif %}
+
+                        {% if session.get('user_id') %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                User
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                                <li><a class="dropdown-item" href="{{ url_for('main.index') }}">Profile</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('main.logout') }}">Logout</a></li>
+                            </ul>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('main.login') }}">Login</a>
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
