added cards functions

--- a/app/templates/admin_signup.html
+++ b/app/templates/admin_signup.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div>
         <form action="" method="POST">
-            {{ form.csrf_token() }}
+            {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend>
                     Sign Up an Admin Account
