--- a/app/templates/cards_edit.html
+++ b/app/templates/cards_edit.html
@@ -2,21 +2,29 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Edit Records Record</h2>
+    <h2>Edit Records Card</h2>
 
     <form method="POST" action="{{ url_for('cards_blueprint.cards_edit', card_id=card._id) }}">
         <input type="hidden" id="card_id" name="card_id" value="{{ card.card_id }}">
         <div class="mb-3">
-            <label for="card_name" class="form-label">Record Name</label>
+            <label for="card_name" class="form-label">Card Name</label>
             <input type="text" class="form-control" id="card_name" name="card_name" required>
         </div>
         <div class="mb-3">
-            <label for="card_name" class="form-label">Record Type</label>
-            <input type="text" class="form-control" id="card_name" name="card_name">
+            <label for="card_type" class="form-label">Card Type</label>
+            <input type="text" class="form-control" id="card_type" name="card_type">
         </div>
         <div class="mb-3">
-            <label for="price" class="form-label">Price</label>
-            <input type="number" step="0.01" class="form-control" id="price" name="price" value="{{ card.price }}" required>
+            <label for="account_number" class="form-label">Account Number</label>
+            <input type="number" step="0.01" class="form-control" id="account_number" name="account_number" required>
+        </div>
+        <div class="mb-3">
+            <label for="expiration" class="form-label">Expiration</label>
+            <input type="number" step="0.01" class="form-control" id="expiration" name="expiration" required>
+        </div>
+        <div class="mb-3">
+            <label for="cvv" class="form-label">CVV/CVC</label>
+            <input type="number" step="0.01" class="form-control" id="cvv" name="cvv" required>
         </div>
         <button type="submit" class="btn btn-primary">Save Changes</button>
         <a href="{{ url_for('cards_blueprint.cards') }}" class="btn btn-secondary">Cancel</a>
@@ -31,13 +39,17 @@
         var cardName = selectedRecord.getAttribute('data-card-name');
         var cardType = selectedRecord.getAttribute('data-card-type');
         var cardId = selectedRecord.getAttribute('data-card-id');
-        var cardPrice = selectedRecord.getAttribute('data-price');
+        var cardAccountNumber = selectedRecord.getAttribute('data-account_number');
+        var cardExpiration = selectedRecord.getAttribute('data-expiration');
+        var cardCVV = selectedRecord.getAttribute('data-cvv');
 
         // Set the values in the form fields
         document.getElementById('card_id').value = cardId;
         document.getElementById('card_name').value = cardName;
         document.getElementById('card_type').value = cardType;
-        document.getElementById('price').value = cardPrice;
+        document.getElementById('account_number').value = cardAccountNumber;
+        document.getElementById('expiration').value = cardExpiration;
+        document.getElementById('cvv').value = cardCVV;
     }
 </script>
 {% endblock %}
