--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,22 +1,26 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="container-dashboard">
-        <div class="container-sales">
-            <div class="card">
-                <a href=" {{ url_for('sales_blueprint.sales') }} ", class="card-link">
-                    <h3>Total Sales</h3>
-                    <p>${{ total_sales }}</p>    
-                </a>
+        {% if cards_blueprint.cards %}
+            <!-- <div class="container-sales">
+                <div class="card">
+                    <a href=" {{ url_for('sales_blueprint.sales') }} ", class="card-link">
+                        <h3>Total Sales</h3>
+                        <p>${{ total_sales }}</p>    
+                    </a>
+                </div>
+            </div> -->
+            <div class="container-cards">
+                <div class="card">
+                    <a href=" {{ url_for('cards_blueprint.cards') }} ", class="card-link">
+                        <h3>Total Cards</h3>
+                        <p>{{ total_cards }}</p>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="container-products">
-            <div class="card">
-                <a href=" {{ url_for('products_blueprint.products') }} ", class="card-link">
-                    <h3>Total Products</h3>
-                    <p>{{ total_products }}</p>
-                </a>
-            </div>
-        </div>
+        {% else %}
+            <div>Dashboard</div>
+        {% endif %}
     </div>
 {% endblock %}
 
