--- a/app/templates/sales_edit.html
+++ b/app/templates/sales_edit.html
@@ -6,20 +6,20 @@
 
     <form method="POST" action="{{ url_for('sales_blueprint.sales_edit', record_id=record._id) }}">
         <div class="mb-3">
-            <label for="product_label" class="form-label">Product</label>
-            <select class="form-control" id="product_label" name="product_label" required onchange="updateProductDetails()">
-                {% for product in products %}
-                    <option value="{{ product.product_name }}|{{ product.product_type }}" 
-                        {% if product.product_id == record.product_id %}selected{% endif %}
-                        data-price="{{ product.price }}" data-product-id="{{ product.product_id }}">
-                        {{ product.product_name }} - {{ product.product_type }}
+            <label for="record_label" class="form-label">Record</label>
+            <select class="form-control" id="record_label" name="record_label" required onchange="updateRecordDetails()">
+                {% for record in records %}
+                    <option value="{{ record.record_name }}|{{ record.record_type }}" 
+                        {% if record.record_id == record.record_id %}selected{% endif %}
+                        data-price="{{ record.price }}" data-record-id="{{ record.record_id }}">
+                        {{ record.record_name }} - {{ record.record_type }}
                     </option>
                 {% endfor %}
             </select>
         </div>
-        <input type="hidden" id="product_id" name="product_id" value="{{ record.product_id }}">
-        <input type="hidden" id="product_name" name="product_name" value="{{ record.product_name }}">
-        <input type="hidden" id="product_type" name="product_type" value="{{ record.product_type }}">
+        <input type="hidden" id="record_id" name="record_id" value="{{ record.record_id }}">
+        <input type="hidden" id="record_name" name="record_name" value="{{ record.record_name }}">
+        <input type="hidden" id="record_type" name="record_type" value="{{ record.record_type }}">
     
         <div class="mb-3">
             <label for="sale_date" class="form-label">Date of Sale</label>
@@ -47,20 +47,20 @@
 </div>
 
 <script>
-    // Function to update product details when a product is selected
-    function updateProductDetails() {
-        var productSelect = document.getElementById('product_label');
-        var selectedProduct = productSelect.options[productSelect.selectedIndex];
-        var productName = selectedProduct.value.split('|')[0];
-        var productType = selectedProduct.value.split('|')[1];
-        var productId = selectedProduct.getAttribute('data-product-id');
-        var productPrice = selectedProduct.getAttribute('data-price');
+    // Function to update record details when a record is selected
+    function updateRecordDetails() {
+        var recordSelect = document.getElementById('record_label');
+        var selectedRecord = recordSelect.options[recordSelect.selectedIndex];
+        var recordName = selectedRecord.value.split('|')[0];
+        var recordType = selectedRecord.value.split('|')[1];
+        var recordId = selectedRecord.getAttribute('data-record-id');
+        var recordPrice = selectedRecord.getAttribute('data-price');
 
         // Set the values in the form fields
-        document.getElementById('product_id').value = productId;
-        document.getElementById('product_name').value = productName;
-        document.getElementById('product_type').value = productType;
-        document.getElementById('price').value = productPrice;
+        document.getElementById('record_id').value = recordId;
+        document.getElementById('record_name').value = recordName;
+        document.getElementById('record_type').value = recordType;
+        document.getElementById('price').value = recordPrice;
 
         // Reset quantity and total fields
         // document.getElementById('quantity').value = '';
@@ -68,7 +68,7 @@
         calculateTotal()
     }
 
-    // Function to calculate total price based on quantity and product price
+    // Function to calculate total price based on quantity and record price
     function calculateTotal() {
         var quantity = parseFloat(document.getElementById('quantity').value);
         var price = parseFloat(document.getElementById('price').value);
